--- a/package.json
+++ b/package.json
@@ -17,7 +17,6 @@
     "express-validator": "^6.15.0",
     "jsonwebtoken": "^9.0.0",
     "mongoose": "^7.0.3",
-    "nodemon": "^2.0.22",
-    "ws": "^8.13.0"
+    "nodemon": "^2.0.22"
   }
 }
